--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,6 +17,12 @@ body {
   padding: 0;
 }
 
+.user-info span {
+  position: relative;
+  top: 3px;
+  right: 3px;
+}
+
 .ut-red {
   color: #ab3135;
 }
@@ -43,7 +49,7 @@ span.ut-red {
 }
 
 #index {
-  background: url(https://cdn.pixabay.com/photo/2019/10/04/12/05/train-4525444_960_720.jpg)
+  background: url(https://th.bing.com/th/id/OIP.K3_oGunOpbTRjSZMf7BqRAHaD4?w=327&h=180&c=7&r=0&o=5&pid=1.7)
     no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -64,7 +70,7 @@ header {
 
 .container {
   max-width: 980px; /* Aaron */
-  height: 72px; /* Aaron */
+  /* height: 72px;  Aaron */
   margin: auto;
 }
 
@@ -200,8 +206,8 @@ td {
 }
 
 .user-edit-form input {
-  background: transparent;
-  text-align: center;
+  /* background: transparent;
+  text-align: center; */
 }
 
 .user-edit-form tbody {
@@ -282,4 +288,42 @@ td {
 
 .img-404 img {
   max-height: 50vh;
+}
+
+.form-signin {
+  max-width: 330px;
+  padding: 15px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.form-signin .logo {
+  margin: auto;
+  float: none;
+}
+
+/* Bootstrap Modal */
+#modal-button {
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  z-index: 9999;
+}
+
+#chat {
+  border: 1px solid gainsboro;
+  border-radius: 10px;
+  padding: 30px;
+}
+
+#chat li {
+  line-height: 2;
+}
+
+.chat-icon {
+  position: absolute;
+  top: 70px;
+  left: 10px;
 }
