--- a/views/_pages/about.ejs
+++ b/views/_pages/about.ejs
@@ -3,24 +3,17 @@
     <div class="row align-items-center g-lg-5 py-3">
       <div class="col-lg-5 text-center text-lg-start mb-3">
         <figure>
-          <img src="https://avatars.githubusercontent.com/u/6644259" />
+          <img src="/img/img1.jpg" />
         </figure>
       </div>
 
       <div class="col-md-10 mx-auto col-lg-7 mb-5">
         <!-- Inspiration: https://codepen.io/abol/pen/arPeZz -->
-        <h1 class="display-4">Aaron Snowberger</h1>
+        <h1 class="display-4">Kwak Gye-young</h1>
         <p>
-          Aaron Daniel Snowberger is currently a PhD candidate in the Graduate
-          School of Information and Communications Engineering, majoring in
-          Information and Communications Engineering, at Hanbat National
-          University, Korea. He received his B.S degree in Computer Science from
-          the College of Engineering, University of Wyoming, USA in 2006 and his
-          M.FA degree in Media Design from Full Sail University, USA in 2011.
-          From 2010 to present, he is a professor of English Conversation at
-          Jeonju University, Korea. His research interests include computer
-          vision, natural language processing, image processing, signal
-          processing, and machine learning.
+          This image is from my military days
+          Kwak Gye-young is majoring in computer science. My hometown is Boeun and I like to play. My favorite hobbies are bowling and playing Battleground.
+          My nickname is relay swimming.
         </p>
       </div>
     </div>
