--- a/views/_partials/_footer.ejs
+++ b/views/_partials/_footer.ejs
@@ -1,9 +1,13 @@
 <!-- views/partials/footer.ejs -->
 
 <!-- FOOTER -->
+<p>
+  <%- include('../courses/_courseModal.ejs') %>
+  <a href = "/chat" calss = "btn btn-primary chat-icon">@</a>
+</p>
 <footer class="text-center fixed-bottom bg-dark text-bg-dark pt-3">
   <p class="ut-red">
-    <span class="text-white">&copy; 2023</span> Aaron Snowberger | KNUT
+    <span class="text-white">&copy; 2024</span> 2026003 곽계영 | KNUT
   </p>
 </footer>
 
